New-Upload-1755854042013/objects/Record_Type_Visibility__c.object
<CustomObject>
    <fields>
        <fullName>Permission_Set__c</fullName>
        <label>Permission Set</label>
        <referenceTo>Permission_Set__c</referenceTo>
        <relationshipLabel>Record Type Visibilities</relationshipLabel>
        <relationshipName>Record_Type_Visibilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Record Type Visibility</label>
    <nameField>
        <displayFormat>RTV-{0000}</displayFormat>
        <label>Record Type Visibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Type Visibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>